Porfa que funcione

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -30,7 +30,7 @@ import { ProviderStatus } from '../components/ProviderStatus';
   />
   <FeatureCard
     icon="🎨"
-    title="Modern UI"
+    title="Modern UI!"
     description="Modern and responsive user interface inspired by Twitch, with smooth animations and intuitive controls."
   />
   <FeatureCard
